Fixed some bugs, added checkbox for toggling slide overflow. Removed jQuery UI CSS

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 #outer-container {
-	background: orangered;
+	background: #ACA1A0;
 	position: fixed; 
 	display: inline-block;
 	top: 3em;
@@ -33,25 +33,25 @@ body {
 	display: inline-block;
 	width:100%;
 	height: 100%;
-	background: lime; 
+	background: #ACA1A0; 
 }
 
 #top-container {
 	display: inline-block;
-	background: purple;
+	background: #ACA1A0;
 	width: 100%;
 	height: 100%;
 }
 #bottom-container {
 	display: inline-block;
-	background: orange;
+	background: #ACA1A0;
 	width: 100%;
 	height: 100%;
 }
 
 .pane {
 	border: 5px solid #191D24;
-	background: teal;
+	background: #D8D4C6;
 }
 
 /* STYLE THIS TO CHNAGE THE HANDLE */
@@ -81,9 +81,29 @@ li {
 	width: 30px;
 	height: 30px;
 	display: inline-block;
-	float: none !important;
 }
-.ui-tabs .ui-tabs-nav li.ui-tabs-active {
+.ui-tabs .ui-tabs-nav li.ui-tabs-active, .ui-tabs .ui-tabs-nav li {
 	margin: 0;
 	padding: 0;
+	outline: none;
+}
+.left-drop .ui-tabs-nav .ui-helper-reset .ui-helper-clearfix .ui-widget-header .ui-corner-all .ui-droppable {
+	-webkit-padding-start: 0px !important;
+}
+
+
+.left-toggler {
+	background: red;
+	width: 10px !important;
+	border-top-right-radius: 10px !important;
+	border-bottom-right-radius: 10px !important;
+	display: inline-block;
+}
+.ui-layout-resizer {
+	width: 15px !important;
+
+}
+
+.tab-section {
+	background: orange;
 }
